Refactored CandidateValidator and StreamPractice for improved readability, performance, and maintainability
1. **CandidateValidator:**
   - Extracted logic for checking the candidate's time in Ukraine into a separate method `checkTimeLivingInCountry` for better readability.
   - Added the constant `HYPHEN_SEPARATOR` for the "-" character.
   - Kept validation checks for the period format.

2. **StreamPractice:**
   - **selectMenByAge:** Refactored to use a `Predicate` (`filterMenByAge`) for selecting men within a specific age range. Replaced `collect(Collectors.toList())` with `.toList()` for simplicity and optimization.
   - **getWorkablePeople:** Renamed the predicate to `isWorkableFilter` for better clarity and replaced `collect(Collectors.toList())` with `.toList()`.
   - **validateCandidates:** Removed the explicit creation of `CandidateValidator` and directly passed `new CandidateValidator()` to the filter method. Updated to use `.toList()` instead of `collect(Collectors.toList())`.
   - **findMinEvenNumber:** Combined the split and stream operations into a single `flatMap`, and added the constant `COMMA_SEPARATOR` for the comma character.
   - **getCatsNames:** Refactored to combine `map` and `flatMap` into one operation and replaced `collect(Collectors.toList())` with `.toList()`.

These changes aim to improve the readability, efficiency, and maintainability of the code by using reusable predicates, optimizing stream operations, and reducing unnecessary object creation.